Arie Nugraha (dicarve@yahoo.com)
Wardiyono (wynerst@gmail.com)
Purwoko (purgeologi@yahoo.com)
Sulfan Zayd (sulfan@gmail.com)
Arif Syamsudin (buitenzorg812@lc.vlsm.org)
Rasyid Ridho (ridhoedogawa@yahoo.com)
Tobias Zeumer (tzeumer@verweisungsform.de)
Jhon Urrego Felipe Mejia (ingenierofelipeurrego@gmail.com)

THANKS TO OUR USERS AND COMMUNITIES, YOU ARE DEVELOPERS TOO!

SENAYAN 3 Stable 13
========================================================================
- Fixed : Loan by classification reporting for non-decimal class
- Fixed : OPAC search error when searching with GMD or Collection type containing more than one word
- Fixed : Non-decimal class total titles and items in Custom Recapitulation reporting
- Fixed : Holiday calculation bugs in Circulation (critical)
- Added : Espanol/Spanish translation (John Urrego Felipe Mejia)
- Added : Arabic translation (Rasyid Ridho)
- Added : SWF Document Viewer
- Added : Circulation transaction receipt when transaction is finished
- Added : Bibliographic item data export and import features
- Added : Union Catalogue Server (experimental)


SENAYAN 3 Stable 12
========================================================================
- Added : Member login in OPAC
- Added : File download limitation based on Member type
- Added : new public template (igos & terrafirma)
- Added : new admin template (igos)


SENAYAN 3 Stable 11
========================================================================
- Added : Change Loan Date and Due Date manually in circulation transaction (if enabled)
- Added : Replaced language constants with gettext (thanks a lot to Tobias Zeumer).
- Added : German SQL (translates all default data).
- Added : Stock Take, List only item for current logged in user in current stock take and Upload item code list.
- Added : Label on Bibliographic records can have URL.
- Added : German translations from Tobias Zeumer.
- Added : security enhancement for language switch in sysconfig.