@@ -145,8 +145,9 @@ class simbio_date
             // get the UNIX timestamp of date
             $_parsed_date1 = date_parse($date1);
             $_parsed_date2 = date_parse($date2);
-            $timestamp1 = mktime(0, 0, 0, $_parsed_date1['month'], $_parsed_date1['day'], $_parsed_date1['year']);
-            $timestamp2 = mktime(0, 0, 0, $_parsed_date2['month'], $_parsed_date2['day'], $_parsed_date2['year']);
+            $timestamp1 = $_parsed_date1['year'].$_parsed_date1['month'].$_parsed_date1['day'];
+            $timestamp2 = $_parsed_date2['year'].$_parsed_date2['month'].$_parsed_date2['day'];
+
             if ($timestamp1 > $timestamp2) {
                 return $date1;
             } else {
